; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_posix.c_p_write.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_posix.c_p_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@EPIPE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @p_write(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i8*, i8** %6, align 8
  store i8* %10, i8** %8, align 8
  br label %11

11:                                               ; preds = %36, %29, %3
  %12 = load i64, i64* %7, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %43

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i64 @write(i32 %15, i8* %16, i64 %17)
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %31

21:                                               ; preds = %14
  %22 = load i64, i64* @errno, align 8
  %23 = load i64, i64* @EINTR, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %29, label %25

25:                                               ; preds = %21
  %26 = load i64, i64* @errno, align 8
  %27 = call i64 @GIT_ISBLOCKED(i64 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %25, %21
  br label %11

30:                                               ; preds = %25
  store i32 -1, i32* %4, align 4
  br label %44

31:                                               ; preds = %14
  %32 = load i64, i64* %9, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %36, label %34

34:                                               ; preds = %31
  %35 = load i64, i64* @EPIPE, align 8
  store i64 %35, i64* @errno, align 8
  store i32 -1, i32* %4, align 4
  br label %44

36:                                               ; preds = %31
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* %7, align 8
  %39 = sub i64 %38, %37
  store i64 %39, i64* %7, align 8
  %40 = load i64, i64* %9, align 8
  %41 = load i8*, i8** %8, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 %40
  store i8* %42, i8** %8, align 8
  br label %11

43:                                               ; preds = %11
  store i32 0, i32* %4, align 4
  br label %44

44:                                               ; preds = %43, %34, %30
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i64 @write(i32, i8*, i64) #1

declare dso_local i64 @GIT_ISBLOCKED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
